--- a/Libro.tex
+++ b/Libro.tex
@@ -2586,128 +2586,38 @@ ricercare. Fare le cose che ci piacciono, senza che nessuno veda, senza il bisog
 
 “…quando il testimone e lo spettatore se ne sono andati, scompaiono i vizi, il cui piacere deriva dall’essere mostrati e osservati”. - Seneca
 
-Alcune volte però abbiamo delle aspettative verso gli altri, che ci possono fare sentire soli. Quando
-l'aspettativa diventa pretesa, mi aspetto che gli altri si comportino in un certo modo e, se non
-lo fanno, potrei allontanarmi, facendomi sentire ancora più solo in una sorta di profezia che si auto avvera. Quando siamo
-in gruppo capita che ogni tanto non veniamo ascoltati, perché a turno qualcuno e, altre volte noi, riusciremo a
-catturare più l'attenzione degli altri. Se però poniamo l'attenzione solo a
-quando l'interesse è sugli altri, potremmo avere la percezione che gli altri ci stiano ignorando. Quando
-riconosci che sta succedendo, ricorda che l'attenzione del gruppo va a turno su tutti, anche su di
-te, allora dagli un etichetta a questa voce, un nomignolo, ad esempio: ecco lo Iacopo abbandonato, e ritorni sulla
-conversazione.
-
-A volte ci sentiremo incompresi, qualcuno cercherà di tirarci giù, di sminuirci, ci dirà che non si fa così, ma la
-verità è che nessuno è cattivo, o comunque, sono pochissimi al mondo ad essere intrinsecamente malvagi. Le persone
-fanno ciò che fanno per qualche motivo che non sappiamo e, forse non lo sanno nemmeno loro, perché pensano che per loro
-sia giusto fare così in quel momento, più che per fare qualcosa contro qualcun altro.
-
-Quando ci lamentiamo di una persona, proviamo a scrivere i suoi lati positivi. Ci accorgeremo che spesso i lati positivi
-sono più di quelli negativi. Se ci abituiamo a fare questo esercizio tenderemo a essere meno critici verso gli altri e verso
-noi stessi. Come non vorremmo essere giudicati dalle nostre azioni nei momenti peggiori, non dovremmo farlo neanche noi
-con gli altri.
-
-Un esperimento condotto alcuni anni fa dai ricercatori della Banca mondiale Karla Hoff e Priyanka Pandey su bambini
-appartenenti a varie caste indiane, ha osservato che non vi erano differenze tra loro nell'abilità di risolvere
-indovinelli finché ai ragazzini non veniva chiesto, prima del test, di quale casta facessero parte. Dopo la
-dichiarazione, le performances degli appartenenti alle caste inferiori peggioravano. Il motivo? La paura di confermare
-uno stereotipo, come “i poveri sono meno intelligenti”, ostacola la capacità di emergere già dai primi anni di scuola.
-Il che significa non che i poveri siano meno dotati o studiosi, ma che essere considerati “inferiori” li pone in una
-condizione di svantaggio. 
-
-Si chiama effetto Pigmalione osservato in un esperimento di Rosenthal e Jacobson. Il ricercatore ha comunicato, a
-diversi insegnanti, il nome di alcuni bambini della classe che hanno ottenuto punteggi elevati
-all'Harvard test of Inflected Acquisition. In realtà questo test non esiste e i nomi sono stati
-scelti in maniera casuale. Analizzando il rendimento di questi bambini per i primi due anni di scuola è emerso che
-quest'ultimi hanno superato di oltre 15 punti l'andamento dei compagni di
-classe. I risultati hanno osservato come le aspettative verso gli altri possono diventare profezie che si auto-avverano. O
-forse gli insegnanti, una volta appreso il potenziale dei bambini hanno iniziato a comportarsi diversamente,
-incoraggiandoli, seguendoli, rispiegando e credendo in loro. L'esperimento non ha isolato specificamente le azioni degli insegnanti; non è chiaro fino a che punto cambiamenti comportamentali dell’insegnante abbiano determinato il miglioramento
-\endnote{\raggedright\url{https://www.stateofmind.it/2016/02/effetto-pigmalione-esperimento/}}.
-
-Entrando in relazione con le persone della impariamo a conoscerle con pregi e difetti.
+Entrando in relazione con le persone impariamo a conoscerle, con pregi e difetti.
 L'amico che si ricorda di fare gli auguri a tutti i compleanni probabilmente è una persona
 metodica abituata ad andare a letto presto e, pretendere che possa consolarti alle tre di notte perché il partner ti ha
 lasciato è un aspettativa irrealistica. Viceversa, l'amica che ti consola alle tre di notte
 potrebbe non ricordarsi il suo compleanno e, ancor meno quello degli altri. Tutti abbiamo pro e contro e dovremmo
-valutare se il rapporto tra quello che noi reputiamo pregi e difetti é vantaggioso, e vedere se la relazione ci fa crescere e ci appaga.
+valutare se il rapporto tra quello che noi reputiamo pregi e difetti é vantaggioso, osservando se la relazione ci fa crescere e ci appaga.
 
-Nelle relazioni (con persone, cose, situazioni ecc) ci focalizziamo su quello che abbiamo o su quello che ci manca? Su cosa gli altri
-dovrebbero fare per noi o su cosa noi possiamo o avremmo potuto fare per gli altri?
-Ci focalizziamo sulle similitudini che abbiamo con l'altro oppure sulle differenze? Le relazioni spesso non funzionano
-da sole, ma costano impegno, ma se sappiamo vedere le cose belle che ci sono,
-l'impegno non costerà più così tanta fatica. Possiamo imparare a prendere del tempo per far crescere
-quella relazione in maniera disinteressata, ascoltando quella persona e facendo il tifo per lei.
+Osserviamo se nelle relazioni, ci focalizziamo più su quello che abbiamo o su quello che ci manca. Su cosa gli altri crediamo dovrebbero fare per noi o su cosa invece noi possiamo fare per gli altri.
+Quando ci lamentiamo di una persona, proviamo a scrivere i suoi lati positivi. Ci accorgeremo che spesso sono più di quelli negativi. Se ci abituiamo a fare questo esercizio tenderemo a essere meno critici verso gli altri e verso noi stessi. Come non vorremmo essere giudicati dalle nostre azioni nei momenti peggiori, non dovremmo farlo neanche noi con gli altri.
 
 Per Adler, la felicità è influenzata dal senso di contributo che diamo agli altri. Non sei tu a decidere se il tuo contributo
-è stato di giovamento, ti serve soltanto la sensazione soggettiva di essere utile a qualcuno, ma non per piacere agli
-altri.
+è stato di giovamento, ti serve soltanto la sensazione soggettiva di essere utile a qualcuno.
 
-Quindi dovremmo fare della beneficenza? Lavorare bene e prendersi cura degli amici? Dipende, non conta solo quello che
-fai, ma la motivazione con cui lo fai e se in linea coi tuoi valori. Se fai beneficenza solo per allontanare il
-dubbio di essere un egoista o ti dedichi alle amicizie per paura del rifiuto, allora difficilmente si riuscirà a trarre
-soddisfazione da queste azioni. La motivazione dovrebbe essere fare qualcosa che ci piace, non fare qualcosa che ci
-allontani da qualcosa che non ci piace. Per essere apprezzati, bisogna apprezzare; per essere sostenuti, bisogna
-sostenere; per avere più amore, bisogna amare di più. Fin da bambini, chiediamo continuamente ai genitori di essere
-guardati mentre facciamo qualcosa e, anche da adulti abbiamo bisogno di “essere visti”. 
-
-A volte si sente dire che noi siamo la somma delle cinque relazioni più importanti. Questo ci suggerisce che dovremmo
-circondarci di persone positive. A volte però questo non è possibile e, possiamo imparare a gestire anche le relazioni
-quando diventano complicate. Può succedere con i colleghi, i quali non possiamo sceglierli o allontanarli, ma può
-succedere anche con le persone che ci stanno più vicine e con cui vogliamo mantenere un buon rapporto. Il filosofo
-Arthur Schopenhauer con il dilemma del porcospino vuole farci riflettere su questo: immaginate un gruppo di porcospini
-che trovano un posto per affrontare la notte gelida. Se stanno troppo vicini si feriranno con i loro aculei, se invece
-stanno troppo lontani non potranno godere del calore altrui nelle notti invernali. Questo dilemma ci mostra come le
-relazioni possono cambiare e di quanto sia importante lo stare assieme, ma senza soffocarsi e limitarsi, lasciando
-quindi libertà all'altro. Non bisogna farsi imbrigliare dalle logiche sociali, se ci sono persone
-che si vedono tutti i giorni e litigano, mentre, se si sentono solo al telefono riescono invece ad avere un rapporto
-bellissimo, di primo impatto ci verrebbe da chiedersi, che razza di rapporto sia, ma perché? Se loro hanno saputo
-trovare una modalità funzionale per stare assieme e stare bene, è solo questo quello che conta. Se fai una telefonata a
-una persona, dovresti farla perché hai voglia di sentirlo, non perché se non lo fai senti di poterlo/a perdere.
-Allo stesso modo se uno ti dice: guarda, ora non posso, tu potrai riattaccare il telefono serenamente, dicendo: non c'è
-problema, richiamami tu quando sei libero/a.
+Quindi dovremmo fare della beneficenza? Dipende, non conta solo quello che fai, ma la motivazione con cui lo fai. Se fai beneficenza solo per allontanare il
+dubbio di essere un egoista o ti dedichi alle amicizie per paura del rifiuto, allora difficilmente si riuscirà a trarre soddisfazione da queste azioni. Ci sono infatti persone che si vedono tutti i giorni e litigano, mentre, se si sentono solo al telefono riescono invece ad avere un buon rapporto e, non c'è nulla che non vada in questo.
 
 \begin{mdframed}[linewidth=1pt]
 Lo stress è contagioso?
 
-In determinate situazioni osservazionali, può verificarsi una trasmissione di stress attraverso risposte fisiologiche condivise. È stato osservato da una ricerca del Max Planck Institute di Lipsia e dell'Università di
-Dresda: gli osservatori dovevano monitorare altre persone durante una situazione di stress, poi anno misurato i loro livelli
-di cortisolo, l'ormone dello stress ed era aumentato nel 26\% fino ad arrivare addirittura al 40\% nel caso in cui la
-persona osservata fosse una conoscenza intima.
+In determinate situazioni osservazionali, può verificarsi una trasmissione di stress attraverso risposte fisiologiche condivise. È stato osservato da una ricerca del Max Planck Institute di Lipsia e dell'Università di Dresda: gli osservatori hanno monitorato alcune persone durante una situazione di stress, poi anno misurato i loro livelli di cortisolo, osservando un aumentodel 26\% fino ad arrivare addirittura al 40\% nel caso in cui la persona osservata fosse una conoscenza intima.
 \end{mdframed}
 
-Più in generale, anche parlando di relazioni che non sono così vicine per noi, dovremmo imparare a lasciar in pace gli
-altri\endnote{\raggedright\url{https://www.amazon.it/dp/B07D7X233K}}. Capita spesso che le conversazioni abbiano il fine di persuadere gli altri. Se andiamo a vedere il nocciolo, la radice di forse ogni litigio, è la pretesa che gli altri abbiano le nostre idee.
-Se discuto con qualcuno, spesso voglio che lui o lei pensi che io abbia ragione.
-La maggioranza delle cose che etichettiamo come negative deriva spesso dalla delusione di aspettative o dal fatto che qualcuno non abbia agito come desideravamo. Se sono pacifico probabilmente non mi interesserà cosa pensa la gente, e forse non avrò la pretesa che l'universo sia come dico io\endnote{\raggedright\url{https://youtube.com/watch?v=nHlEOQUWQcw}}.
+Se osserviamo il nocciolo, la radice di forse ogni litigio, è la pretesa che gli altri la pensino come noi.
+La maggioranza delle iterazioni che etichettiamo come negative, deriva spesso dalla delusione di aspettative, dal fatto che qualcuno non abbia agito come noi desideravamo. Se sono pacifico probabilmente non mi interesserà cosa pensa la gente, e forse non avrò la pretesa che l'universo sia come dico io\endnote{\raggedright\url{https://youtube.com/watch?v=nHlEOQUWQcw}}.
 
 Non dovremmo volere che gli altri si adeguino a quello che
 riteniamo più appropriato, sul loro stile di vita, il loro comportamento, le loro decisioni ecc… perché dovremmo
-volerlo se per noi non cambierebbe niente? Questa è una domanda interessante da porsi. Potrebbe anche essere, che i
-nostri suggerimenti siano migliori di quello che gli altri stanno proponendo di fare, ma non è questo il punto. Anche
-se il suggerimento è giusto, è interessante sapere che cosa ci ha mosso a dare questo consiglio. In una certa misura
-c'è dietro una credenza di sapere meglio degli altri che cosa sia giusto e, ci aspettiamo anche
-che venga seguito il nostro consiglio. Questo si vede bene quando riceviamo consigli da sconosciuti, 
-o che ci conoscono poco e, che quindi è probabile che abbiamo un interesse relativo verso di noi, così talvolto, quello che resta è solo il mostrare agli altri e a sé stessi quante cose giuste si sanno. Non dovremmo dare consigli non richiesti, perché in queste parole si può nascondere la presunzione di
-sapere cos'è giusto, anche se fatto con le migliori intenzioni. Inoltre aleggia anche il pensiero:
-ti aiuto perché da solo non saresti in grado.
-Le persone hanno il diritto all'ignoranza se non vogliono sentire informazioni potenzialmente
-dolorose. Quindi anche un matrimonio che potrebbe essere salvato, dovrebbe essere lasciato alla responsabilità della
-coppia, se vediamo che non c'è il desiderio di un confronto. Il miglior modo di comunicare è dire
-poco e con cautela, osservando se nell'altra persona c'è l'interesse e la disponibilità ad ascoltare di più.
-Cerchiamo di dire solo un 20\% circa di un argomento in quanto l'attenzione della gente è limitata. In questo modo non rischiamo di annoiare il nostro interlocutore e, se l'argomento invece gli interessa, sarà lui a farcele. Se invece siamo persone che parlano poco, cerchiamo di parlare di più in modo da arrivare a questo 20\%.
+volerlo se per noi non cambierebbe niente? 
 
-Ichiro Kishimi e Fumitake Koga in Il coraggio di non piacere\endnote{\raggedright\url{https://www.amazon.it/dp/8851169918}} parlano
-della psicologia adleriana e di come capire di cosa occuparti senza interferire con gli altri. Se un bambino non studia
-dovremmo chiederci, di chi è il colpito? Del bambino o dei genitori? Ovviamente del bambino. Quindi non porterebbe
-nessun vantaggio al bambino se studiassero i genitori. Obbligare il figlio a studiare non gli farà nascere l'amore per
-lo studio. C'è un modo semplice per stabilire di chi sia il compito: chiedersi chi sia il
-destinatario del risultato prodotto dalla scelta fatta. Possiamo spiegare che lo studio è un suo compito e che siamo
-disposti ad aiutarlo ogni qual volta ne senta la necessità.
-
-Puoi condurre il cavallo all'acqua, ma non puoi obbligarlo a bere.
-
-Allo stesso modo possiamo impedire agli altri che si intromettano nei nostri compiti. Anche lo stare simpatici agli
-altri non è compito nostro, perché non ne abbiamo il potere.
+Potrebbe anche essere, che i nostri suggerimenti siano migliori di quello che gli altri stanno proponendo di fare. Anche se il suggerimento fosse giusto, è interessante sapere che cosa ci ha mosso a dare questo consiglio. In alcuni casi potrebbe esserci una credenza di sapere meglio degli altri, che cosa sia giusto. In alcuni casi potrebbe nascondersi, inconsicamente, per chi da o chi riceve il consigliglio, un messaggio tipo: ti aiuto perché da solo non saresti in grado.
+Un buon modo di comunicare è dire poco e con cautela, osservando se nell'altra persona c'è l'interesse ad ascoltare di più.
+Anche al di là dei consigli, cerchiamo di dire solo un 20\% circa di un argomento, in quanto l'attenzione delle persone è limitata. In questo modo non rischiamo di annoiare il nostro interlocutore e, se l'argomento invece d'interesse, sarà lui a fare domande. Se invece siamo persone che parlano poco, cerchiamo di parlare di più in modo da arrivare a questo 20\%.
 
 \begin{mdframed}[linewidth=1pt]
 Anche gli scimpanzé maturano con l'età? 
@@ -2717,38 +2627,26 @@ osservazione, che i maschi di scimpanzé, con il passare degli anni iniziano ad 
 importanti e mostrano una riduzione delle interazioni aggressive rispetto ai giovani. Le ricercatrici Zarin Machanda e Alexandra Rosati si sono concentrate sui maschi, perché le femmine sono più legate al gruppo famigliare. 
 \end{mdframed}
 
-Le relazioni abbiamo visto essere importanti, ma non per questo dobbiamo cercare di far funzionare tutte le relazioni. A
+Le relazioni abbiamo visto essere importanti, ma non per questo dobbiamo cercare di farle funzionare tutte. A
 volte potremmo avere nella nostra vita amicizie che non sono positive per noi.
 Come capire se tagliare un rapporto? A volte basta solo domandarsi: sono più le volte che sto male o sto bene con questa persona? Oltre alla quantità, qual è la qualità del benessere o del malessere?
 
-A volte una persona che fa un grave torto a un'altra per un piccolo favore a se stessa è vista come
-determinata, ambiziosa ed essere spietati è incoraggiato in alcuni ambienti, anche se tutto
-l'ambiente ci continua a dimostrare che da soli, senza cooperazione, un individuo singolo non può
-fare molto, soprattutto in un mondo complesso come quello attuale.
-
 \subsection{Esercizi}
 \subsubsection{Scrittura}
-Quando ci accorgiamo che la nostra mente torna sempre su certi pensieri, su certe preoccupazioni future o episodi
-passati, possiamo fare in modo di fare uscire questi pensieri ed evitare che restino ancorati dentro di noi con la
-scrittura espressiva. Una volta scelto il tema, prendi carta e penna, o un
-computer, smartphone, tablet ecc… Trova un posto tranquillo dove poter scrivere per almeno 15 minuti consecutivi.
-Puoi anche scrivere per ore, ma l'importante è superare i 15 minuti di scrittura continua su quel
-tema. Scrivi a ruota libera, senza curati delle regole grammaticali, della punteggiatura e di tutto ciò che potresti
-scrivere, senza auto censurarti. Un'altra regola è cancellare quello che si è
-scritto una volta che terminiamo di scrivere. In questo modo puoi scrivere con più leggerezza, senza la paura che
-qualcuno possa leggerlo, anche tu stesso, notando gli errori e contenuti che non vorresti che altri conoscessero.
-Inoltre, il nostro scopo è quello di fare uscire tutto quello che c'è dentro, se lo rileggessimo
-rischiamo di riportarlo dentro di noi. Ti renderai conto che non è facile, perché scrivendo tenderai ad andare su altri
-argomenti, proprio come fa la nostra attenzione. Ogni volta che succede ritorna sul tema principale, anche se
-riscriverai cose già dette. Ripeti questo esercizio per almeno tre giorni, sempre alla stessa ora, fino ad un massimo
-di cinque, restando sul tema scelto. 
-Se stiamo Ripensando a degli episodi della nostra vita, scriviamo come li definiamo e successivamente pensiamo ad una nuova definizione più funzionale. Se però noti che la sofferenza non cala, non insistere, forse la
-ferita è ancora troppo fresca, si consiglia di aspettare almeno due mesi dall'accaduto o rivolgersi a uno psicologo.
+Quando ci accorgiamo che la nostra mente torna sempre su certi pensieri, su certe preoccupazioni future o episodi passati, possiamo fare uscire questi pensieri ed evitare che restino ancorati dentro di noi con la scrittura espressiva. Una volta scelto il tema, prendi carta e penna, o un computer e scrivi per almeno 15 minuti consecutivi.
+Puoi anche scrivere per ore, ma l'importante è superare i 15 minuti di scrittura continua su quel tema. Scrivi a ruota libera, senza curati delle regole grammaticali, della punteggiatura, senza auto censurarti. Una volta finito, buttiamo tutto, in modo da poter scrivere con più leggerezza, senza la paura che qualcuno possa leggerlo.
+Inoltre, il nostro scopo è quello di fare uscire quello che c'è dentro, se lo rileggessimo rischiamo di riportarlo dentro di noi. 
+Quando si scrive, si tende ad andare su altri argomenti, quando succede, ritorna sul tema principale, anche se riscriverai cose già dette. Ripeti questo esercizio per almeno tre giorni, sempre alla stessa ora circa, fino ad un massimo di cinque, restando sul tema scelto. 
+Se stiamo Ripensando a degli episodi della nostra vita, scriviamo come li definiamo e successivamente pensiamo ad una nuova definizione più funzionale. 
+Se noti che la sofferenza non cala, non insistere, forse la ferita è ancora troppo fresca.
 
-Se una situazione del passato ci tormenta e sentiamo che c'è ancora qualcosa di irrisolto con qualcuno, se possiamo
-chiarirci direttamente con quella persona, facciamolo, altrimenti possiamo scrivergli una lettera e poi, decidere se
-inviarla o meno. In questa lettera trova una conclusione con quella persona o situazione.
-Questa si chiama la tecnica della lettera mai inviata. Anche quando abbiamo l'intento di inviare questo messaggio, spesso ci accorgeremo di non averne più bisogno.
+Se sentiamo che c'è ancora qualcosa di irrisolto con qualcuno e, possiamo chiarirci di persona, facciamolo, altrimenti possiamo scrivergli una lettera e poi, decidere se inviarla o meno. In questa lettera trova una conclusione con quella persona o situazione.
+Questa è la tecnica della lettera mai inviata. Anche quando abbiamo l'intento di inviare questo messaggio, spesso ci accorgeremo di non averne più bisogno.
+
+
+
+
+
 
 Abbiamo detto che se sì continua a parlare di un certo disagio si rischia di calcificarlo e renderlo cronico. Al contempo sappiamo
 che tenere tutto dentro fa male, quindi, qual è la strada giusta? Sì se ci lamentiamo e basta, senza un minimo di
@@ -3624,6 +3522,7 @@ Libri da cui ho tratto questo capitolo:
 \item La trappola della felicità\endnote{\raggedright\url{https://www.amazon.it/dp/B01G3UCPVM}}
 \item L'arte di non amareggiarsi la vita\endnote{\raggedright\url{https://www.amazon.it/dp/B00B0ZN91G}}
 \item La legge del contrario\endnote{\raggedright\url{https://www.amazon.it/dp/B015P8AD8K}}
+\item Il coraggio di non piacere\endnote{\raggedright\url{https://www.amazon.it/dp/8851169918}}
 \item Psicosoluzioni \endnote{\raggedright\url{https://www.amazon.it/dp/B008HRMDK8/}}
 \item Istruzioni per rendersi infelici\endnote{\raggedright\url{https://www.amazon.it/dp/880788254X}}
 \item Psicotrappole\endnote{\raggedright\url{https://www.amazon.it/dp/883331054X}}
@@ -4753,11 +4652,6 @@ disaccordo e, dura solo sette minuti per tre volte all'anno. Bisogna scrivere de
 conflitto avuto con il partner assumendo il punto di vista di un'ipotetica terza persona che desidera il bene di
 entrambi. Le coppie che hanno svolto questo esercizio non litigavano meno delle altre, ma tornavano più facilmente ad
 uno stato di serenità.
-
-Capita spesso di dire che incontriamo sempre le persone sbagliate. Se succede sempre però potremmo avere una responsabilità in questi episodi. 
-Ad esempio: un individuo che si ritiene vulnerabile, per via delle sue esperienze passate nei
-momenti di difficoltà, in un momento di stress, potrebbe porsi con rabbia, suscitando nel suo interlocutore un normale
-distanziamento, freddezza, o abbandono, confermando così l'idea che aveva di sé stesso.\endnote{\raggedright\url{https://www.stateofmind.it/2020/06/attaccamento-disregolazione-emotiva/}}.
 
 \begin{mdframed}[linewidth=1pt]
 Qual è la durata ideale di un rapporto sessuale?
